also update email in config file

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=x07iGN0AAAAJ&hl=en"
-  email            : "michael.nodzenski@unc.edu"
+  email            : "michael.nodzenski@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
