--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Michael Nodzenski"
-  avatar           : "nodzenski_portrait.JPG"
-  bio              : "PhD Student, Department of Biostatistics, University of North Carolina at Chapel Hill"
+  avatar           : "nodzenski_portrait.png"
+  bio              : "PhD Candidate, Department of Biostatistics, University of North Carolina at Chapel Hill"
   location         : "Chapel Hill, North Carolina"
   employer         :
   pubmed           : 
