second try linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "michael-nodzenski"
+  linkedin         : "michael-nodzenski-261170265"
   orcid            : "https://orcid.org/0000-0001-5476-8427"
   pinterest        :
   soundcloud       :
