update professioal info

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Michael Nodzenski"
   avatar           : "nodzenski_portrait.png"
-  bio              : "Research Statistician Developer at SAS"
-  location         : "Cary, North Carolina"
+  bio              : "Statistical Research Scientist at Rho"
+  location         : "Durham, North Carolina"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=x07iGN0AAAAJ&hl=en"
